updated App.js; index JS and CSS files; added to package.json; added testing code to server commented

--- a/client/index.css
+++ b/client/index.css
@@ -1,3 +1,7 @@
-* {
-  background-color: blue;
+body {
+  /*font-family: 'Roboto Mono', monospace;*/
+  /*font-family: 'DM Mono', monospace;*/
+  font-family: 'Press Start 2P', cursive;
+  background: linear-gradient(90deg, #FFDFDF 0%, #CDECFF 100%); 
+  /*background: black*/
 }
