--- a/client/components/Footer/Footer.css
+++ b/client/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 .footer {
   text-align: center;
   font-size: small;
-  position:fixed;
-  padding: 0 10px 0 10px;                 
+  position: fixed;
+  padding: 0 10px;                 
   left: 0px;
   bottom: 20px;
   width: 100%;
