New Login Form renders, signup tweaked for testing

--- a/client/index.css
+++ b/client/index.css
@@ -1,8 +1,10 @@
 body {
   /*font-family: 'Roboto Mono', monospace;*/
   /*font-family: 'DM Mono', monospace;*/
+  height: 100%;
+  width: 100%;
   font-family: 'Sintony', sans-serif;
-  background: linear-gradient(90deg, #FFDFDF 0%, #CDECFF 100%); 
+  background: linear-gradient(90deg, #ffdfdf 0%, #cdecff 100%);
   /*background: black*/
 }
 
@@ -65,11 +67,14 @@ body {
   margin: 10px 0px;
 }
 
-.yelpscoredetail, .walkscoredetail, .iqairscoredetail {
+.yelpscoredetail,
+.walkscoredetail,
+.iqairscoredetail {
   margin: 0px 30px;
 }
 
-.yelpscoredetail, .iqairscoredetail {
+.yelpscoredetail,
+.iqairscoredetail {
   padding-top: 20px;
 }
 
